package com.factory;

/**
 * @author liucui
 * @date 2023/3/6  23:44
 */

public class ChicagoStyleClamPizza extends Pizza{
    public ChicagoStyleClamPizza(){
        name = "Chicago Style Clam Pizza";
    }
}
