package com.factory;

/**
 * @author liucui
 * @date 2023/3/6  23:46
 */

public class ChicagoStylePepperoniPizza extends Pizza{
    public ChicagoStylePepperoniPizza(){
        name = "Chicago Style Pepperoni Pizza";
    }
}
