package com.factory;

/**
 * @author liucui
 * @date 2023/3/6  23:45
 */

public class ChicagoStyleVeggiePizza extends Pizza{
    public ChicagoStyleVeggiePizza(){
        name = "Chicago Style Veggie Pizza";
    }
}
