package com.factory;

/**
 * @author liucui
 * @date 2023/3/6  22:49
 */

public class NyStyleCheesePizza extends Pizza{
    public NyStyleCheesePizza(){
        name = "NY Style Sauce and Cheese Pizza";
        dough = "This Crust Dough";
        sauce = "Marinara Sauce";
        toppings.add("Grated Region Cheese ");
    }
}
