package com.factory;

/**
 * @author liucui
 * @date 2023/3/6  23:35
 */

public class NyStyleClamPizza extends Pizza{
    public NyStyleClamPizza(){
        name = "NY Style Clam Pizza";
    }
}
