package com.factory;

/**
 * @author liucui
 * @date 2023/3/6  23:36
 */

public class NyStylePepperoniPizza extends Pizza{
    public NyStylePepperoniPizza(){
        name = "NY Style PepperoniPizza";
    }
}
