package com.factory;

/**
 * @author liucui
 * @date 2023/3/6  23:33
 */

public class NyStyleVeggiePizza extends Pizza{
    public NyStyleVeggiePizza() {
        name = "NY Style Veggie Pizza";
    }
}
